--- a/app.json
+++ b/app.json
@@ -1,8 +1,19 @@
 {
   "pages": [
+    "pages/user/index",
+    "pages/user/order/order",
+    "pages/user/address/address",
+    "pages/user/coupon/coupon",
+    "pages/user/share/share",
+    "pages/login/AuthenticationOk/AuthenticationOk",
+    "pages/login/authentication/authentication",
+    "pages/login/index",
+    "pages/login/register/register",
+  
     "pages/index/index",
-    "pages/shoppingCar/index",
-    "pages/user/index"
+    "pages/shoppingCar/index"
+   
+   
   ],
   "window": {
     "backgroundTextStyle": "light",
