--- a/app.json
+++ b/app.json
@@ -1,15 +1,19 @@
 {
   "pages": [
-    "pages/user/index",
-    "pages/user/order/order",
+    "pages/user/addAddress/addAddress",
     "pages/user/address/address",
+    "pages/user/order/order",
+    "pages/user/index",
+   
+    
     "pages/user/coupon/coupon",
     "pages/user/share/share",
     "pages/login/AuthenticationOk/AuthenticationOk",
     "pages/login/authentication/authentication",
-    "pages/login/index",
     "pages/login/register/register",
-  
+    "pages/login/index",
+    
+
     "pages/index/index",
     "pages/shoppingCar/index"
    
