更新全部配置文件

--- a/app.json
+++ b/app.json
@@ -12,11 +12,11 @@
     "pages/login/authentication/authentication",
     "pages/login/index",
     "pages/login/register/register",
-    "pages/login/index",
 
 
 
     "pages/index/index",
+    "pages/index/details",
     "pages/shoppingCar/index"
 
 
