--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/login/index",
     "pages/index/index",
+    "pages/login/index",
     "pages/index/confirm/confirm",
     "pages/index/details/details",
     "pages/user/order/order",
@@ -13,7 +13,9 @@
     "pages/user/index",
     "pages/user/address/address",
     "pages/user/addAddress/addAddress",
-    "pages/user/coupon/coupon"
+    "pages/user/coupon/coupon",
+    "pages/index/carConfirm/carConfirm",
+    "pages/index/orderConfirm/orderConfirm"
   ],
   "window": {
     "backgroundTextStyle": "light",
