--- a/app.json
+++ b/app.json
@@ -47,7 +47,7 @@
       }
     ]
   },
-  "debug": true,
+  "debug": false,
   "networkTimeout": {
     "request": 10000,
     "connectSocket": 10000,
