--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/login/index",
+    "pages/login/startUp/startUp",
     "pages/index/index",
     "pages/index/confirm/confirm",
     "pages/index/details/details",
